Terraform/network.tf
# =========================================================
# 1. Réseau virtuel principal
# =========================================================


resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-projet-siso"
  location            = var.location
  resource_group_name = var.resource_group_name
  address_space       = ["10.0.0.0/16"]

  depends_on = [
    azurerm_resource_group.rg
  ]
}


# =========================================================
# 2. Sous-réseau AKS
# =========================================================

resource "azurerm_subnet" "aks_subnet" {
  name                 = "snet-aks"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}


# =========================================================
# 3. Sous-réseau Kali
# =========================================================

resource "azurerm_subnet" "kali_subnet" {
  name                 = "snet-kali"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.4.0/24"]
}


# =========================================================
# 4. Sous-réseau Azure Firewall
# =========================================================

resource "azurerm_subnet" "fw_subnet" {
  name                 = "AzureFirewallSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.2.0/26"]
}


# =========================================================
# 5. Sous-réseau de management Azure Firewall
# =========================================================


resource "azurerm_subnet" "fw_mgmt_subnet" {
  name                 = "AzureFirewallManagementSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.3.0/26"]
}


# =========================================================
# 6. Table de routage AKS
# =========================================================


resource "azurerm_route_table" "aks_udr" {
  name                = "rt-aks"
  location            = var.location
  resource_group_name = var.resource_group_name

  route {
    name                   = "default-via-firewall"
    address_prefix         = "0.0.0.0/0"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = azurerm_firewall.fw.ip_configuration[0].private_ip_address
  }
}


# =========================================================
# 7. Association de la table de routage au sous-réseau AKS
# =========================================================


resource "azurerm_subnet_route_table_association" "aks_assoc" {
  subnet_id      = azurerm_subnet.aks_subnet.id
  route_table_id = azurerm_route_table.aks_udr.id
}
